# grab_anything

./: .gitignore  .gitmodules  README.md  image_text.py  motion_planning_python_api_tutorial.rst  requirements.txt
.docker/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh
config/: motion_planning_python_api_tutorial.rviz
docker-gazebo/: docker-compose.yaml
docker-gazebo/.docker/: Dockerfile
grab_anything/: grab_object_node.py  image_text.py  initial_node.py  requirements.txt  setup.py
grab_anything/grab_anything_ws/: CMakeLists.txt
grab_anything/grab_anything_ws/config/: motion_planning_python_api_tutorial.yaml
grab_anything/grab_anything_ws/launch/: grab_anything.launch.py  motion_planning_python_api_tutorial.launch.py
grab_anything/grab_anything_ws/scripts/: motion_planning_python_api_tutorial.py
grab_anything/libs/: segmentate_image.py
grab_anything/libs/config/: checkpoints.py  groundingdino_cfg.py
grab_anything/libs/outputs/: label.json
grab_anything_ws/: package.xml
grab_anything_ws/config/: camera.urdf.xacro  panda.ros2_control.xacro  panda.urdf.xacro  panda_initial_pose.yaml
grab_anything_ws/launch/: grab_anything.launch.py
grab_anything_ws/src/: grab_object_node.py
launch/: motion_planning_python_api_tutorial.launch.py
